Fix business rules grammar.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -135,7 +135,7 @@ Table 9: Website Administrator user's stories.
 
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
-| BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and instuticion (not required). |
+| BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and institution (not required). |
 | BR02 | Project Member Removed | When a Project Member is removed from the project, all the work made is maintained and he is removed from the tasks he was assigned to, with all project's managers/owners being notified.|
 | BR03 | Project Member Banned | When a Project Member is banned by the website administration, all the work made is maintained and he is removed from the tasks he was assigned to, with all projects managers/owners being notified.|
 | BR04 | Project Manager Removed | When a Project Manager is removed from the project, all the work made is maintained and he is removed from the tasks he was assigned to, with all the project's managers/owners being notified.|
