--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -16,7 +16,7 @@ Figure 1: Actors.
 | Authenticated User | Authenticated user, can create and contribute to projects | Projects developers and contributors |
 | Premium Authenticated User | Premium authenticated user, can create and contribute to projects, both private and public | Projects developers and contributors |
 | Administrator | Authenticated user, can manage users and projects | Admin |
-| OAUTH | OAUTH Protocol (API) will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
+| OAUTH | OAUTH Protocol (API) will be used to register and authenticate into the system. | Google/Facebook/Microsoft... account|
 | Project Owner | Has all the project permissions, can delete the project and manage coordinators | A project creator |
 | Project Manager | Can manage all team members and tasks | A project supervisor |
 | Project Member | Can contribute to projects, creating and solving tasks | A project member |
@@ -121,10 +121,10 @@ Table 8: Project Owner's user stories.
 | :----------:|:-------------:| :-----:|:-------|
 | US43| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
 | US44| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
-| US45| Promote User     | high | As an Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website functionalities.|
-| US46| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US47| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
-| US48| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+| US45| Promote User     | high | As a Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website features.|
+| US46| Ban User        | high | As a Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
+| US47| Maintenance     | low | As a Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and features.|
+| US48| General Messages| low | As a Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 | US49| Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
 
 Table 9: Website Administrator user's stories.
@@ -158,11 +158,11 @@ Table 10: Business rules.
 | TR05 |Portability |The server side system should only work on Linux |
 | TR06 |Database |Must use PostgreSQL database management |
 | TR07 |Security |System will protect information from unauthorized access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection, Password Storage, Cross-site Scripting) |
-| TR08 |Robustness |The system must be prepared to handle and continue operating when runtime errors occur |
+| TR08 |Robustness |The system must be prepared to handle and continue operating when run time errors occur |
 | TR09 |Scalability |System must be prepared to deal with user base growth and corresponding operations |
 | TR10 |Ethics |The system must respect the ethical principles in software development. |
 
-Table 11: Technical requiriments.
+Table 11: Technical requirements.
 
 ### A1.3. Restrictions
 
@@ -177,10 +177,11 @@ Table 12: Restrictions
 
 Changes made to the first submission:
 1. Increased user stories specificity.
-2. Added the premium users branch to UML
-3. Added user stories
-4. Specified used API (OAUTH protocol)
-5. Rewrote business rules
+2. Added the premium users branch to UML.
+3. Added user stories.
+4. Specified used API (OAUTH protocol).
+5. Rewrote business rules.
+6. Improved grammar and semantics.
 ***
 
 
