--- a/artifacts/A3.md
+++ b/artifacts/A3.md
@@ -9,8 +9,7 @@
 <img src="images/Sitemap.png" title="User Sitemap">
 
 > Sitemap presenting the overall structure of the web application.
-> Each screen must be identified in the sitemap.
-> Multiple pages of the same screen (e.g. student profile in SIGARRA) are presented as page stacks.
+> Multiple pages of the same screen are presented as page stacks.
  
 ## 3. Storyboards
  
