Added Visitor Actor and user stories...
Dashboard US, and some US for Website Administrator

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -12,7 +12,8 @@ Figure 1: Actors.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
-| User | Unauthenticated user, can see public projects but can't contribute to any of them and can register itself (sign-up) or sign-in in the system. | n/a |
+| User | Generic user, has access to public information, such as public projects. | n/a |
+| Visitor | Unauthenticated user that can sign-up or login.| n/a |
 | Authenticated User | Authenticated user, can create and contribute to projects | Projects developers and contributors |
 | Premium Authenticated User | Premium authenticated user, can create and contribute to projects, both private and public | Projects developers and contributors |
 | Administrator | Authenticated user, can manage users and projects | Admin |
@@ -33,101 +34,113 @@ Table 1: Actor's description.
 
 | Identifier | Name | Priority | Description |
 | :----------:|:--------------|:---------:|:------------|
-| US01 | Log in | high | As a User, I want to authenticate into the system, so that I can access privileged information.  |
-| US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
-| US03 | Home Page | high | As a User, I want to access the home page, so that I can see a brief website's description.  |
-| US04 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
-| US05 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
-| US06 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
-| US07 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
-| US08 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
-| US09 | Search profiles | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
-| US10 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
-| US11 | Log in | high | As a User, I want to authenticate into the system using a third party account.|
+| US04 | Home Page | high | As a User, I want to access the home page, so that I can see a brief website's description.  |
+| US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
+| US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
+| US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
+| US08 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
+| US09 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
+| US10 | Search Users | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
+| US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
 
 Table 3: User's user stories.
 
-### 2.1.1 Authenticated User
+### 2.1.1. Visitor
+
+| Identifier | Name | Priority | Description |
+| :----------:|:--------------|:---------:|:------------|
+| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
+| US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
+| US03 | Log in using OAUTH | high | As a Visitor, I want to authenticate into the system using a third party account.|
+
+Table 4: Visitor's user stories.
+
+### 2.1.2. Authenticated User
 
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US12 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
 | US13 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
-| US14 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example how many tasks I've marked as closed for a given project), so that I can stay informed.|
-| US15 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
-| US16 | Delete account | low | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
+| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity.|
+| US15 | View my projects | high | As an Authenticated I want to have a page where i can see all my projects, so that I can better access them.|
+| US16 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example how many tasks I've marked as closed for a given project), so that I can stay informed.|
+| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
+| US18 | Delete account | low | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
 
-Table 4: Authenticated User's user stories.
+Table 5: Authenticated User's user stories.
 
 
-### 2.1.2 Authenticated Premium User
+### 2.1.2.1. Authenticated Premium User
 
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US17 | Private projects | high | As an Authenticated Premium User, I want to be able to create private projects, so that only I or the project's team members can access and edit it.|
+| US19 | Create private projects | high | As an Authenticated Premium User, I want to be able to create private projects, so that only I or the project's team members can access and edit it.|
 
 
-Table 5: Authenticated Premium User's user stories.
+Table 6: Authenticated Premium User's user stories.
 
-### 2.1.1.1 Project Member
-
-| Identifier  | Name          | Priority  | Description |
-| :----------:|:-------------:| :-----:|:-------|
-| US18 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
-| US19 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
-| US20 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
-| US21 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
-| US22 | Assign to My Tasks | medium | As a project member, I want to assign a project member to a task that I've created, so that he can help complete it.|
-| US23 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
-| US24 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
-| US25 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
-| US26 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
-| US27 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
-| US28 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
-
-Table 6: Project Member's user stories.
-
-### 2.1.1.2 Project Manager
+### 2.1.2.2. Project Member
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US29 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
-| US30 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
-| US31 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
-| US32 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
-| US33 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
-| US34 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
-| US35 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
-| US36 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
-| US37 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
-| US38 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
-| US39 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
+| US20 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
+| US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
+| US22 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
+| US23 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
+| US24 | Assign to My Tasks | medium | As a project member, I want to assign a project member to a task that I've created, so that he can help complete it.|
+| US25 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
+| US26 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
+| US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
+| US28 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
+| US29 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
+| US30 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
 
-Table 7: Project Administrator's user stories.
+Table 7: Project Member's user stories.
 
-### 2.1.1.3 Project Owner
-
-| Identifier  | Name          | Priority  | Description |
-| :----------:|:-------------:| :-----:|:-------|
-| US40 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
-| US41 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
-| US42 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
-
-Table 8: Project Owner's user stories.
-
-### 2.2.3 Website Administrator
+### 2.1.2.2.1. Project Manager
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US43| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
-| US44| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
-| US45| Promote User     | high | As a Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website features.|
-| US46| Ban User        | high | As a Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US47| Maintenance     | low | As a Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and features.|
-| US48| General Messages| low | As a Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
-| US49| Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
+| US31 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
+| US32 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
+| US33 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
+| US34 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
+| US35 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
+| US36 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
+| US37 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
+| US38 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
+| US39 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
+| US40 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US41 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
 
-Table 9: Website Administrator user's stories.
+Table 8: Project Administrator's user stories.
+
+### 2.1.2.2.1.1. Project Owner
+
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------|
+| US42 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
+| US43 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
+| US44 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
+
+Table 9: Project Owner's user stories.
+
+### 2.2. Website Administrator
+
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------|
+| US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website.|
+| US46 | Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
+| US47 | Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
+| US48 | Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
+| US49 | Search Users | high | As a Website Administrator, I want to be able to perform extensive User searches, so that I can better moderate the website.|
+| US50 | View Profile | high | As a Website Administrator, I want to be able to visit a page with a user's detailed information, so that I can better moderate the website.|
+| US51 | Promote User     | high | As a Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website features.|
+| US52 | Ban User        | high | As a Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
+| US53 | Maintenance     | low | As a Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and features.|
+| US54| General Messages| low | As a Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+
+Table 10: Website Administrator user's stories.
 
 ## A1. Annex: Supplementary requirements
 
@@ -182,10 +195,16 @@ Changes made to the first submission:
 4. Specified used API (OAUTH protocol).
 5. Rewrote business rules.
 6. Improved grammar and semantics.
+
+Changes made to the second submission:
+1. Added Visitor actor and users stories.
+2. Added missing User stories to Website Administrator.
+3. Added Dashboard and related User stories to Authenticated User users stories;
+
 ***
 
 
-GROUP43, 18/02/2018
+GROUP43, 27/02/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt   
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
