Start Interface and common features

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -2,13 +2,14 @@
 
 ## 1. Interface and common features
 
+<img src="/design/images_pages/Home.png" title="Homepage">
+Figure 1: Homepage of PLENUM.
 > Screenshots highlighting the main elements of the interface, for desktop and mobile.
 
 ## 2. Sitemap
 
 <img src="images/Sitemap.png" title="User Sitemap">
-
-> Sitemap presenting the overall structure of the web application.
+Figure 1: Sitemap presenting the overall structure of the web application.
 
 ## 3. Storyboards
 
