Add Subtitles to image in A3.

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -1,10 +1,29 @@
 # A3: User Interface Prototype
 
+This artifact contains the overview of the interface elements and features for our **Project Management** Web Application.
+
 ## 1. Interface and common features
 
-<img src="/design/images_pages/Home.png" title="Homepage">
+**Plenum** is a web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
+
+<img src="/design/images_pages/Home_numbers.png" title="Homepage">
+1.Logo
+2.Navbar
+3.Content
+4.Footer
 Figure 1: Homepage of PLENUM.
-> Screenshots highlighting the main elements of the interface, for desktop and mobile.
+
+In this figure some characteristics common to all the pages are highlighted:
+- Color Scheme:
+ - Dark Liver (#50514F);
+ - Sunset Orange (#F25F5C)
+ - Mustard (#FFE066)
+ - Lapis Lazuli (#247BA0)
+ - Green Sheen (#70C1B3)
+- The common links to the various pages maintain their position to make the user experience consistent.
+
+<img src="/design/images_pages/Home.png" title="Homepage">
+Figure 2: Homepage of PLENUM.
 
 ## 2. Sitemap
 
