--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -7,10 +7,12 @@ This artifact contains the overview of the interface elements and features for o
 **Plenum** is a web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
 
 <img src="/design/images_pages/Home_numbers.png" title="Homepage">
-1.Logo
-2.Navbar
-3.Content
-4.Footer
+
+1.  Logo
+2.  Navigation Bar
+3.  Content
+4.  Footer
+
 Figure 1: Homepage of PLENUM.
 
 In this figure some characteristics common to all the pages are highlighted:
