Add some common features.

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -18,14 +18,14 @@ Figure 1: Homepage of PLENUM.
 In this figure some characteristics common to all the pages are highlighted:
 - Color Scheme:
   - Dark Liver (#50514F);
-  - Sunset Orange (#F25F5C)
-  - Mustard (#FFE066)
-  - Lapis Lazuli (#247BA0)
-  - Green Sheen (#70C1B3)
-- The common links to the various pages maintain their position to make the user experience consistent.
-
-<img src="/design/images_pages/Home.png" title="Homepage">
-Figure 2: Homepage of PLENUM.
+  - Sunset Orange (#F25F5C);
+  - Mustard (#FFE066);
+  - Lapis Lazuli (#247BA0);
+  - Green Sheen (#70C1B3);
+- The common links to the various pages maintain their position to make the user experience consistent;
+- User have the link to the dashboard, where he can view all his projects and tasks;
+- Search any User, Project or Task;
+- Responsive design to help user at any device (computer, tablet, smartphone, etc...).
 
 ## 2. Sitemap
 
