--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -41,9 +41,84 @@ Figure 1: Sitemap presenting the overall structure of the web application.
 
 > Screenshots, structured in subsections, including a reference, a description and a URL to the working version.
 
-### UI01: Home
+### UI01: Homepage
+<img src="images/Interface/UI01_Homepage.png" title="Homepage">
 
-### UI02: About
+### UI02: FAQ:
+<img src="images/Interface/UI02_FAQ.png" title="FAQ">
+
+### UI03: About:
+<img src="images/Interface/UI03_About.png" title="About">
+
+### UI04: Log In:
+<img src="images/Interface/UI05_Login.png" title="Log In">
+
+### UI05: Sign Up:
+<img src="images/Interface/UI05_Sign Up.png" title="Sign Up">
+
+### UI06: Dashboard:
+<img src="images/Interface/UI06_Dashboard.png" title="Dashboard">
+
+### UI07: Dashboard My Projects:
+<img src="images/Interface/UI07_Dashboard_projects.png" title="Dashboard My Projects">
+
+### UI08: Dashboard My Tasks:
+<img src="images/Interface/UI08_Dashboard_tasks.png" title="Dashboard My Tasks">
+
+### UI09: New Project:
+<img src="images/Interface/UI09_New_project.png" title="New Project">
+
+### UI10: Project Tasks:
+<img src="images/Interface/UI10_Project_tasks.png" title="Project Tasks">
+
+### UI11: Project Forum:
+<img src="images/Interface/UI11_Project_forum.png" title="Project Forum">
+
+### UI12: Project Members:
+<img src="images/Interface/UI12_Project_members.png" title="Project Members">
+
+### UI13: Project Options:
+<img src="images/Interface/UI13_Project_options.png" title="Project Options">
+
+### UI14: Project Manage Tasks:
+<img src="images/Interface/UI14_Project_manage_tasks.png" title="Project Options">
+
+### UI15: Project Manage Users:
+<img src="images/Interface/UI15_Project_manage_users.png" title="Project Options">
+
+### UI16: Task page:
+<img src="images/Interface/UI16_Task.png" title="Task Page">
+
+### UI17: Edit Task:
+<img src="images/Interface/UI17_Edit_task.png" title="Edit task">
+
+### UI18: Profile:
+<img src="images/Interface/UI18_Profile.png" title="Profile Page">
+
+### UI19: Edit Profile:
+<img src="images/Interface/UI19_Edit_profile.png" title="Edit Profile">
+
+### UI20: Search by Projects:
+<img src="images/Interface/UI20_Search_projects.png" title="Search by projects">
+
+### UI21: Search by Users:
+<img src="images/Interface/UI21_Search_users.png" title="Search by users">
+
+### UI22: Search by Tasks:
+<img src="images/Interface/UI22_Search_tasks.png" title="Search by tasks">
+
+### UI23: Administration Log In:
+<img src="images/Interface/UI23_Admin_log_in.png" title="Admin Log In">
+
+### UI24: Administration Manage Projects:
+<img src="images/Interface/UI24_Admin_projects.png" title="Admin manage projects">
+
+### UI25: Administration Manage Users:
+<img src="images/Interface/UI25_Admin_users.png" title="Admin manage users">
+
+### UI26: Error page:
+<img src="images/Interface/UI26_Error.png" title="Error Page">
+
 
 
 ***
