--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -34,8 +34,21 @@ Figure 1: Sitemap presenting the overall structure of the web application.
 
 ## 3. Storyboards
 
-> Storyboards for the main use cases of the system.
-> Do not include trivial use cases.
+<img src="images/Storyboard/LogIn.png" title="LogIn">
+
+Figure 3: Log In from Home Page.
+
+<img src="images/Storyboard/NewProject.png" title="New Project">
+
+Figure 4: New Project from Dashboard.
+
+<img src="images/Storyboard/EditProfile.png" title="Edit Profile">
+
+Figure 5: Edit Profile from Dashboard.
+
+<img src="images/Storyboard/CreateTask.png" title="Create Task">
+
+Figure 6: Create Task from Dashboard.
 
 ## 4. Interfaces
 
@@ -43,6 +56,8 @@ Figure 1: Sitemap presenting the overall structure of the web application.
 
 ### UI01: Homepage
 <img src="images/Interface/UI01_Homepage.png" title="Homepage">
+
+Figure 7: [Homepage](url).
 
 ### UI02: FAQ:
 <img src="images/Interface/UI02_FAQ.png" title="FAQ">
