--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -29,7 +29,7 @@ In this figure some characteristics common to all the pages are highlighted:
 
 ## 2. Sitemap
 
-<img src="images/Sitemap.png" title="User Sitemap">
+<img src="images/SiteMap.png" title="User Sitemap">
 Figure 1: Sitemap presenting the overall structure of the web application.
 
 ## 3. Storyboards
