Added Url's to Interface Figures (still not working)

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -62,89 +62,139 @@ Figure 7: [Homepage](url).
 ### UI02: FAQ:
 <img src="images/Interface/UI02_FAQ.png" title="FAQ">
 
+Figure 8: [FAQ](url).
+
 ### UI03: About:
 <img src="images/Interface/UI03_About.png" title="About">
+
+Figure 9: [About](url).
 
 ### UI04: Log In:
 <img src="images/Interface/UI05_Login.png" title="Log In">
 
+Figure 10: [Log In](url).
+
 ### UI05: Sign Up:
 <img src="images/Interface/UI05_Sign Up.png" title="Sign Up">
+
+Figure 11: [Sign Up](url).
 
 ### UI06: Dashboard:
 <img src="images/Interface/UI06_Dashboard.png" title="Dashboard">
 
+Figure 12: [Dashboard](url).
+
 ### UI07: Dashboard My Projects:
 <img src="images/Interface/UI07_Dashboard_projects.png" title="Dashboard My Projects">
+
+Figure 13: [Dashboard My Projects](url).
 
 ### UI08: Dashboard My Tasks:
 <img src="images/Interface/UI08_Dashboard_tasks.png" title="Dashboard My Tasks">
 
+Figure 14: [Dashboard My Tasks](url).
+
 ### UI09: New Project:
 <img src="images/Interface/UI09_New_project.png" title="New Project">
+
+Figure 15: [New Project](url).
 
 ### UI10: Project Tasks:
 <img src="images/Interface/UI10_Project_tasks.png" title="Project Tasks">
 
+Figure 16: [Project Tasks](url).
+
 ### UI11: Project Forum:
 <img src="images/Interface/UI11_Project_forum.png" title="Project Forum">
+
+Figure 17: [Project Forum](url).
 
 ### UI12: Project Members:
 <img src="images/Interface/UI12_Project_members.png" title="Project Members">
 
+Figure 18: [Project Members](url).
+
 ### UI13: Project Options:
 <img src="images/Interface/UI13_Project_options.png" title="Project Options">
+
+Figure 19: [Project Options](url).
 
 ### UI14: Project Manage Tasks:
 <img src="images/Interface/UI14_Project_manage_tasks.png" title="Project Options">
 
+Figure 20: [Project Manage Tasks](url).
+
 ### UI15: Project Manage Users:
 <img src="images/Interface/UI15_Project_manage_users.png" title="Project Options">
 
-### UI16: Task page:
+Figure 21: [Project Manage Users](url).
+
+### UI16: Task Page:
 <img src="images/Interface/UI16_Task.png" title="Task Page">
+
+Figure 22: [Task Page](url).
 
 ### UI17: Edit Task:
 <img src="images/Interface/UI17_Edit_task.png" title="Edit task">
 
+Figure 23: [Edit Task](url).
+
 ### UI18: Profile:
 <img src="images/Interface/UI18_Profile.png" title="Profile Page">
+
+Figure 24: [Profile](url).
 
 ### UI19: Edit Profile:
 <img src="images/Interface/UI19_Edit_profile.png" title="Edit Profile">
 
+Figure 25: [Edit Profile](url).
+
 ### UI20: Search by Projects:
 <img src="images/Interface/UI20_Search_projects.png" title="Search by projects">
+
+Figure 26: [Edit Profile](url).
 
 ### UI21: Search by Users:
 <img src="images/Interface/UI21_Search_users.png" title="Search by users">
 
+Figure 27: [Edit Profile](url).
+
 ### UI22: Search by Tasks:
 <img src="images/Interface/UI22_Search_tasks.png" title="Search by tasks">
+
+Figure 28: [Search by Tasks](url).
 
 ### UI23: Administration Log In:
 <img src="images/Interface/UI23_Admin_log_in.png" title="Admin Log In">
 
+Figure 29: [Administration Log In](url).
+
 ### UI24: Administration Manage Projects:
 <img src="images/Interface/UI24_Admin_projects.png" title="Admin manage projects">
+
+Figure 30: [Administration Manage Projects](url).
 
 ### UI25: Administration Manage Users:
 <img src="images/Interface/UI25_Admin_users.png" title="Admin manage users">
 
-### UI26: Error page:
+Figure 31: [Administration Manage Users](url).
+
+### UI26: Error Page:
 <img src="images/Interface/UI26_Error.png" title="Error Page">
+
+Figure 32: [Error Page](url).
 
 
 
 ***
 
-## Revision history
+<!-- ## Revision history
 
 Changes made to the first submission:
 1. Item 1
 1. Item 2
 
-***
+*** -->
 
 GROUP1743, 05/03/2018
 
