organizing access to diff pages and Interface url

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -51,138 +51,135 @@ Figure 5: Edit Profile from Dashboard.
 Figure 6: Create Task from Dashboard.
 
 ## 4. Interfaces
-
-> Screenshots, structured in subsections, including a reference, a description and a URL to the working version.
-
 ### UI01: Homepage
 <img src="images/Interface/UI01_Homepage.png" title="Homepage">
 
-Figure 7: [Homepage](url).
+Figure 7: [Homepage](https://paginas.fe.up.pt/~up201506252/index.php).
 
 ### UI02: FAQ:
 <img src="images/Interface/UI02_FAQ.png" title="FAQ">
 
-Figure 8: [FAQ](url).
+Figure 8: [FAQ](https://paginas.fe.up.pt/~up201506252/faq.php).
 
 ### UI03: About:
 <img src="images/Interface/UI03_About.png" title="About">
 
-Figure 9: [About](url).
+Figure 9: [About](https://paginas.fe.up.pt/~up201506252/about.php).
 
 ### UI04: Log In:
 <img src="images/Interface/UI05_Login.png" title="Log In">
 
-Figure 10: [Log In](url).
+Figure 10: Log In.
 
 ### UI05: Sign Up:
 <img src="images/Interface/UI05_Sign Up.png" title="Sign Up">
 
-Figure 11: [Sign Up](url).
+Figure 11: Sign Up.
 
 ### UI06: Dashboard:
 <img src="images/Interface/UI06_Dashboard.png" title="Dashboard">
 
-Figure 12: [Dashboard](url).
+Figure 12: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
 
 ### UI07: Dashboard My Projects:
 <img src="images/Interface/UI07_Dashboard_projects.png" title="Dashboard My Projects">
 
-Figure 13: [Dashboard My Projects](url).
+Figure 13: [Dashboard My Projects](https://paginas.fe.up.pt/~up201506252/dashboard_my_projects.php).
 
 ### UI08: Dashboard My Tasks:
 <img src="images/Interface/UI08_Dashboard_tasks.png" title="Dashboard My Tasks">
 
-Figure 14: [Dashboard My Tasks](url).
+Figure 14: [Dashboard My Tasks](https://paginas.fe.up.pt/~up201506252/dashboard_tasks.php).
 
 ### UI09: New Project:
 <img src="images/Interface/UI09_New_project.png" title="New Project">
 
-Figure 15: [New Project](url).
+Figure 15: New Project.
 
 ### UI10: Project Tasks:
 <img src="images/Interface/UI10_Project_tasks.png" title="Project Tasks">
 
-Figure 16: [Project Tasks](url).
+Figure 16: [Project Tasks](https://paginas.fe.up.pt/~up201506252/project_tasks.php).
 
 ### UI11: Project Forum:
 <img src="images/Interface/UI11_Project_forum.png" title="Project Forum">
 
-Figure 17: [Project Forum](url).
+Figure 17: [Project Forum](https://paginas.fe.up.pt/~up201506252/project_forum.php).
 
 ### UI12: Project Members:
 <img src="images/Interface/UI12_Project_members.png" title="Project Members">
 
-Figure 18: [Project Members](url).
+Figure 18: [Project Members](https://paginas.fe.up.pt/~up201506252/project_members.php).
 
 ### UI13: Project Options:
 <img src="images/Interface/UI13_Project_options.png" title="Project Options">
 
-Figure 19: [Project Options](url).
+Figure 19: [Project Options](https://paginas.fe.up.pt/~up201506252/project_options.php).
 
 ### UI14: Project Manage Tasks:
 <img src="images/Interface/UI14_Project_manage_tasks.png" title="Project Options">
 
-Figure 20: [Project Manage Tasks](url).
+Figure 20: [Project Manage Tasks](https://paginas.fe.up.pt/~up201506252/project_manage_tasks.php).
 
 ### UI15: Project Manage Users:
 <img src="images/Interface/UI15_Project_manage_users.png" title="Project Options">
 
-Figure 21: [Project Manage Users](url).
+Figure 21: [Project Manage Users](https://paginas.fe.up.pt/~up201506252/project_manage_users.php).
 
 ### UI16: Task Page:
 <img src="images/Interface/UI16_Task.png" title="Task Page">
 
-Figure 22: [Task Page](url).
+Figure 22: [Task Page](https://paginas.fe.up.pt/~up201506252/task_page.php).
 
 ### UI17: Edit Task:
 <img src="images/Interface/UI17_Edit_task.png" title="Edit task">
 
-Figure 23: [Edit Task](url).
+Figure 23: [Edit Task](https://paginas.fe.up.pt/~up201506252/task_edit.php).
 
 ### UI18: Profile:
 <img src="images/Interface/UI18_Profile.png" title="Profile Page">
 
-Figure 24: [Profile](url).
+Figure 24: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
 
 ### UI19: Edit Profile:
 <img src="images/Interface/UI19_Edit_profile.png" title="Edit Profile">
 
-Figure 25: [Edit Profile](url).
+Figure 25: Edit Profile.
 
 ### UI20: Search by Projects:
 <img src="images/Interface/UI20_Search_projects.png" title="Search by projects">
 
-Figure 26: [Edit Profile](url).
+Figure 26: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
 
 ### UI21: Search by Users:
 <img src="images/Interface/UI21_Search_users.png" title="Search by users">
 
-Figure 27: [Edit Profile](url).
+Figure 27: [Search by Users](https://paginas.fe.up.pt/~up201506252/search_users.php).
 
 ### UI22: Search by Tasks:
 <img src="images/Interface/UI22_Search_tasks.png" title="Search by tasks">
 
-Figure 28: [Search by Tasks](url).
+Figure 28: [Search by Tasks](https://paginas.fe.up.pt/~up201506252/search_tasks.php).
 
 ### UI23: Administration Log In:
 <img src="images/Interface/UI23_Admin_log_in.png" title="Admin Log In">
 
-Figure 29: [Administration Log In](url).
+Figure 29: [Administration Log In](https://paginas.fe.up.pt/~up201506252/admin/index.php).
 
 ### UI24: Administration Manage Projects:
 <img src="images/Interface/UI24_Admin_projects.png" title="Admin manage projects">
 
-Figure 30: [Administration Manage Projects](url).
+Figure 30: [Administration Manage Projects](https://paginas.fe.up.pt/~up201506252/admin/projects.php).
 
 ### UI25: Administration Manage Users:
 <img src="images/Interface/UI25_Admin_users.png" title="Admin manage users">
 
-Figure 31: [Administration Manage Users](url).
+Figure 31: [Administration Manage Users](https://paginas.fe.up.pt/~up201506252/admin/users.php).
 
 ### UI26: Error Page:
 <img src="images/Interface/UI26_Error.png" title="Error Page">
 
-Figure 32: [Error Page](url).
+Figure 32: [Error Page](https://paginas.fe.up.pt/~up201506252/error.php).
 
 
 
