--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -5,9 +5,25 @@
 > UML class diagram containing the classes, associations, multiplicity and roles.
 > For each class, the attributes, associations and constraints are included in the class diagram
 
+<img src="images/UML.png" title="UML">
+
 ## 2. Additional Business Rules
 
 > Business rules can be included in the UML diagram as UML notes or in a table in this section.
+
+| Identifier | Name | Description |
+| :----------:|:-------------:|:-----------|
+| BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and institution (not required). |
+| BR02 | Project Member Removed | When a Project Member is removed from the project, all the work made is maintained and he is removed from the tasks he was assigned to, with all project's managers/owners being notified.|
+| BR03 | Project Member Banned | When a Project Member is banned by the website administration, all the work made is maintained and he is removed from the tasks he was assigned to, with all projects managers/owners being notified.|
+| BR04 | Project Manager Removed | When a Project Manager is removed from the project, all the work made is maintained and he is removed from the tasks he was assigned to, with all the project's managers/owners being notified.|
+| BR05 | Project Manager Banned | When a Project Manager is banned by the website administration, all the work made is maintained and he is removed from the tasks he was assigned to, with all the projects managers/owners being notified.|
+| BR06 | Project Owner wants to leave | When a Project Manager wants to leave a project, he must transfer project's ownership to other project member before leave.|
+| BR07 | Project Owner Banned | When a Project Owner is banned, all the projects he used to manage will be archived and reviewed one by one by the website administration, having full permission to terminate or assign ownership to a project member.|
+| BR08 | Authenticated User Account Removed | When a Authenticated User account is removed from the website, all information will be deleted from our database.|
+| BR09 | Authenticated User Banned | When a Authenticated User is banned from the website administration, all information will be deleted from our database.|
+
+Table 1: Business rules.
 
 ***
 <!-- ## Revision history
