--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -7,6 +7,8 @@
 
 <img src="images/UML.png" title="UML">
 
+Figure 1: UML.
+
 ## 2. Additional Business Rules
 
 > Business rules can be included in the UML diagram as UML notes or in a table in this section.
