--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -5,7 +5,7 @@
 > UML class diagram containing the classes, associations, multiplicity and roles.
 > For each class, the attributes, associations and constraints are included in the class diagram
 
-<img src="images/UML.png" title="UML">
+<img src="images/UML.png" title="UML Class diagram">
 
 Figure 1: UML.
 
