Finished UML Class diagram

--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -2,12 +2,9 @@
 
 ## 1. Class diagram
 
-> UML class diagram containing the classes, associations, multiplicity and roles.
-> For each class, the attributes, associations and constraints are included in the class diagram
-
 <img src="images/UML.png" title="UML Class diagram">
 
-Figure 1: UML.
+Figure 1: UML Class diagram.
 
 ## 2. Additional Business Rules
 
