--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -6,7 +6,8 @@ This artifact contains the overview of the interface elements and features for o
 
 **Plenum** is a web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
 
-<img src="images/Common_features/Homepage.png" title="Homepage">
+|<img src="images/Common_features/Homepage.png" width="450" title="Homepage">|<img src="images/Common_features/Homepage_M.png" width="150" title="Homepage_Mobile">|
+
 
 1.  Logo
 2.  Navigation Bar
